add new projects

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zxx">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Burkov Portfolio</title>
@@ -39,14 +40,14 @@
 					</li>
 					<li>
 						<a href="https://www.instagram.com/burkov_misha/" target="_blank">
-							<span>IN</span>
-							<span>IN</span>
+							<span>IG</span>
+							<span>IG</span>
 						</a>
 					</li>
 					<li>
-						<a href="#" target="_blank">
-							<span>TW</span>
-							<span>TW</span>
+						<a href="https://www.linkedin.com/in/m-burkov/" target="_blank">
+							<span>IN</span>
+							<span>IN</span>
 						</a>
 					</li>
 				</ul>
@@ -105,11 +106,11 @@
 		<span>Portfolio</span>
 	</div>
 
-	<div id="wrapper">	
+	<div id="wrapper">
 		<div class="site-cover">
 
 			<section class="section section-1">
-				<div class="s-container scene" data-hover-only="true" data-pointer-events="true" >
+				<div class="s-container scene" data-hover-only="true" data-pointer-events="true">
 					<h1 class="scene-item" data-depth="0.1">Hello! I’m <br>Michael Burkov</h1>
 					<p class="scene-item" data-depth="0.15"><span>Front-end Developer</span> Based in Mykolaiv.</p>
 				</div>
@@ -135,11 +136,11 @@
 											</div>
 										</div>
 									</a>
-									<a href="http://zona-komforta.quatroit.com/" target="_blank" class="portfolio-item">
-										<div class="image" style="background-image: url(assets/img/project-3.jpg);">
+									<a href="https://bsafe-559b02.netlify.app/" target="_blank" class="portfolio-item">
+										<div class="image" style="background-image: url(assets/img/bsafe.jpg);">
 											<div class="screen"></div>
 											<div class="text">
-												<h6>Zona Komforta</h6>
+												<h6>bSAFE</h6>
 												<p>View Website</p>
 											</div>
 										</div>
@@ -148,24 +149,25 @@
 							</div>
 							<div class="portfolio-slide">
 								<div class="portfolio-slide-cover">
-									<a href="https://wp.rovadex.com/vertos/" target="_blank" class="portfolio-item">
-										<div class="image" style="background-image: url(assets/img/project-2.jpg);">
+									<a href="http://ubslogic.topdma.com/" target="_blank" class="portfolio-item">
+										<div class="image" style="background-image: url(assets/img/ubs.jpg);">
 											<div class="screen"></div>
 											<div class="text">
-												<h6>Vertos</h6>
+												<h6>UBSLogic</h6>
 												<p>View Website</p>
 											</div>
 										</div>
 									</a>
-									<a href="https://html.rovadex.com/html-creto/" target="_blank" class="portfolio-item">
-										<div class="image" style="background-image: url(assets/img/project-6.jpg);">
+									<a href="https://bnb42-08baa9.netlify.app/" target="_blank" class="portfolio-item">
+										<div class="image" style="background-image: url(assets/img/bnb42.jpg);">
 											<div class="screen"></div>
 											<div class="text">
-												<h6>Creto</h6>
+												<h6>BNB42</h6>
 												<p>View Website</p>
 											</div>
 										</div>
 									</a>
+
 								</div>
 							</div>
 							<div class="portfolio-slide">
@@ -192,6 +194,15 @@
 							</div>
 							<div class="portfolio-slide">
 								<div class="portfolio-slide-cover">
+									<a href="https://html.rovadex.com/html-creto/" target="_blank" class="portfolio-item">
+										<div class="image" style="background-image: url(assets/img/project-6.jpg);">
+											<div class="screen"></div>
+											<div class="text">
+												<h6>Creto</h6>
+												<p>View Website</p>
+											</div>
+										</div>
+									</a>
 									<a href="https://html.rovadex.com/html-giner/" target="_blank" class="portfolio-item">
 										<div class="image" style="background-image: url(assets/img/project-7.jpg);">
 											<div class="screen"></div>
@@ -201,7 +212,7 @@
 											</div>
 										</div>
 									</a>
-									<a href="https://wp.rovadex.com/abium/" target="_blank" class="portfolio-item">
+									<!-- <a href="https://wp.rovadex.com/abium/" target="_blank" class="portfolio-item">
 										<div class="image" style="background-image: url(assets/img/project-8.jpg);">
 											<div class="screen"></div>
 											<div class="text">
@@ -209,7 +220,16 @@
 												<p>View Website</p>
 											</div>
 										</div>
-									</a>
+									</a> -->
+									<!-- <a href="https://wp.rovadex.com/vertos/" target="_blank" class="portfolio-item">
+										<div class="image" style="background-image: url(assets/img/project-2.jpg);">
+											<div class="screen"></div>
+											<div class="text">
+												<h6>Vertos</h6>
+												<p>View Website</p>
+											</div>
+										</div>
+									</a> -->
 								</div>
 							</div>
 						</div>
@@ -229,26 +249,28 @@
 					<div class="footer-rigth">
 						<a href="#portfolio" class="footer-scroll">
 							<span>scroll</span>
-							<svg x="0px" y="0px" viewBox="0 0 512 512" xml:space="preserve" width="20px" height="20px" style="fill:#fff;">
+							<svg x="0px" y="0px" viewBox="0 0 512 512" xml:space="preserve" width="20px" height="20px"
+								style="fill:#fff;">
 								<path d="M506.134,241.843c-0.006-0.006-0.011-0.013-0.018-0.019l-104.504-104c-7.829-7.791-20.492-7.762-28.285,0.068
 								c-7.792,7.829-7.762,20.492,0.067,28.284L443.558,236H20c-11.046,0-20,8.954-20,20c0,11.046,8.954,20,20,20h423.557
 								l-70.162,69.824c-7.829,7.792-7.859,20.455-0.067,28.284c7.793,7.831,20.457,7.858,28.285,0.068l104.504-104
-								c0.006-0.006,0.011-0.013,0.018-0.019C513.968,262.339,513.943,249.635,506.134,241.843z"/>
+								c0.006-0.006,0.011-0.013,0.018-0.019C513.968,262.339,513.943,249.635,506.134,241.843z" />
 							</svg>
 						</a>
 					</div>
 				</div>
 			</footer>
 
+		</div>
 	</div>
-</div>
 
-<!--=================== SCRIPT	===================-->
-<script src="assets/js/jquery-2.2.4.min.js"></script>
-<script src="assets/js/slick.min.js"></script>
-<!-- <script src="assets/js/horwheel.js"></script> -->
-<script src="assets/js/mousewheel.js"></script>
-<script src="assets/js/parallax.min.js"></script>
-<script src="assets/js/scripts.js"></script>
+	<!--=================== SCRIPT	===================-->
+	<script src="assets/js/jquery-2.2.4.min.js"></script>
+	<script src="assets/js/slick.min.js"></script>
+	<!-- <script src="assets/js/horwheel.js"></script> -->
+	<script src="assets/js/mousewheel.js"></script>
+	<script src="assets/js/parallax.min.js"></script>
+	<script src="assets/js/scripts.js"></script>
 </body>
+
 </html>
