--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -73,15 +73,6 @@
             </a>
           </li>
           <li>
-            <a class="link" href="tel:0631659579">
-              <strong>Phone:</strong>
-              <p>
-                <span class="link-item">(063) 16-59-579</span>
-                <span class="link-item-hover">(063) 16-59-579</span>
-              </p>
-            </a>
-          </li>
-          <li>
             <a class="link" href="mailto:mishaburkov@gmail.com">
               <strong>Email:</strong>
               <p>
@@ -91,8 +82,8 @@
             </a>
           </li>
           <li>
-            <a class="link" href="skype:Emigrant.89?userinfo">
-              <strong>Skype:</strong>
+            <a class="link" href="https://t.me/mishaBurkov">
+              <strong>Telegram:</strong>
               <p>
                 <span class="link-item">Misha Burkov</span>
                 <span class="link-item-hover">Misha Burkov</span>
@@ -191,6 +182,26 @@
                       </div>
                     </a>
                     <a
+                      href="https://www.vivi.topdma.com/"
+                      target="_blank"
+                      class="portfolio-item"
+                    >
+                      <div
+                        class="image"
+                        style="background-image: url(assets/img/vivi-cup.jpg)"
+                      >
+                        <div class="screen"></div>
+                        <div class="text">
+                          <h6>Vivi Cup</h6>
+                          <p>View Website</p>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="portfolio-slide">
+                  <div class="portfolio-slide-cover">
+                    <a
                       href="https://bnb42-08baa9.netlify.app/"
                       target="_blank"
                       class="portfolio-item"
@@ -206,10 +217,6 @@
                         </div>
                       </div>
                     </a>
-                  </div>
-                </div>
-                <div class="portfolio-slide">
-                  <div class="portfolio-slide-cover">
                     <a
                       href="https://html.rovadex.com/html-quadex/"
                       target="_blank"
@@ -222,22 +229,6 @@
                         <div class="screen"></div>
                         <div class="text">
                           <h6>Quadex</h6>
-                          <p>View Website</p>
-                        </div>
-                      </div>
-                    </a>
-                    <a
-                      href="https://html.rovadex.com/html-fitmax/"
-                      target="_blank"
-                      class="portfolio-item"
-                    >
-                      <div
-                        class="image"
-                        style="background-image: url(assets/img/project-5.jpg)"
-                      >
-                        <div class="screen"></div>
-                        <div class="text">
-                          <h6>Fitmax</h6>
                           <p>View Website</p>
                         </div>
                       </div>
@@ -278,15 +269,10 @@
                         </div>
                       </div>
                     </a>
-                    <!-- <a href="https://wp.rovadex.com/abium/" target="_blank" class="portfolio-item">
-										<div class="image" style="background-image: url(assets/img/project-8.jpg);">
-											<div class="screen"></div>
-											<div class="text">
-												<h6>Abium</h6>
-												<p>View Website</p>
-											</div>
-										</div>
-									</a> -->
+                  </div>
+                </div>
+                <div class="portfolio-slide">
+                  <div class="portfolio-slide-cover">
                     <!-- <a href="https://wp.rovadex.com/vertos/" target="_blank" class="portfolio-item">
 										<div class="image" style="background-image: url(assets/img/project-2.jpg);">
 											<div class="screen"></div>
@@ -296,6 +282,22 @@
 											</div>
 										</div>
 									</a> -->
+                    <a
+                      href="https://html.rovadex.com/html-fitmax/"
+                      target="_blank"
+                      class="portfolio-item"
+                    >
+                      <div
+                        class="image"
+                        style="background-image: url(assets/img/project-5.jpg)"
+                      >
+                        <div class="screen"></div>
+                        <div class="text">
+                          <h6>Fitmax</h6>
+                          <p>View Website</p>
+                        </div>
+                      </div>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -314,7 +316,7 @@
             </div>
             <div class="footer-rigth">
               <a href="#portfolio" class="footer-scroll">
-                <span>scroll</span>
+                <span>Scroll To Right</span>
                 <svg
                   x="0px"
                   y="0px"
@@ -341,7 +343,6 @@
     <!--=================== SCRIPT	===================-->
     <script src="assets/js/jquery-2.2.4.min.js"></script>
     <script src="assets/js/slick.min.js"></script>
-    <!-- <script src="assets/js/horwheel.js"></script> -->
     <script src="assets/js/mousewheel.js"></script>
     <script src="assets/js/parallax.min.js"></script>
     <script src="assets/js/scripts.js"></script>
