--- a/pixo/index.html
+++ b/pixo/index.html
@@ -29,7 +29,7 @@
         <span></span>
       </div>
       <div class="container">
-        <a href="/" class="logo">
+        <a href="index.html" class="logo">
           <img src="assets/img/logo.svg" alt="logo" />
         </a>
         <nav class="nav-menu">
@@ -620,7 +620,7 @@
       <div class="container">
         <div class="footer-container">
           <div class="footer-logo-wrap">
-            <a href="/" class="logo-footer"
+            <a href="index.html" class="logo-footer"
               ><img src="assets/img/logo.svg" alt="logo"
             /></a>
           </div>
