fix hrefs in Pixo

--- a/pixo/products.html
+++ b/pixo/products.html
@@ -16,7 +16,11 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
 
-  <body id="products" class="page-product" style="background-color: #f3f3f3">
+  <body
+    id="products"
+    class="page-product animated-home"
+    style="background-color: #f3f3f3"
+  >
     <header class="header wow fadeInDown" data-wow-duration=".8s">
       <div href="#" class="nav-btn">
         <span></span>
