--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,7 +11,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="shortcut icon" href="assets/img/favicon.svg" />
+    <link rel="shortcut icon" href="assets/img/favicon.png" />
     <!-- =================== STYLE =================== -->
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
