add new link for vivi-cap

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -176,11 +176,12 @@
               </div>
               <div class="portfolio__col">
                 <a
-                  href="https://www.vivi.topdma.com/"
+                  href="https://vivi-cap.netlify.app/"
                   target="_blank"
                   class="portfolio__item"
                 >
                   <div class="item-cover">
+                    <div class="label">Vue | Nuxt</div>
                     <img
                       src="assets/img/vivi.jpg"
                       alt="UBSLogic"
@@ -189,6 +190,26 @@
 
                     <div class="info">
                       <div class="name">Vivi Cup</div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="portfolio__col">
+                <a
+                  href="https://rocket-science-4f7274.netlify.app/"
+                  target="_blank"
+                  class="portfolio__item"
+                >
+                  <div class="item-cover">
+                    <div class="label">Vue | Nuxt</div>
+                    <img
+                      src="assets/img/rocket-science.jpg"
+                      alt="rocket science"
+                      loading="lazy"
+                    />
+
+                    <div class="info">
+                      <div class="name">Rocket Science</div>
                     </div>
                   </div>
                 </a>
@@ -223,26 +244,6 @@
 
                     <div class="info">
                       <div class="name">Pixo</div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <div class="portfolio__col">
-                <a
-                  href="https://rocket-science-4f7274.netlify.app/"
-                  target="_blank"
-                  class="portfolio__item"
-                >
-                  <div class="item-cover">
-                    <div class="label">Vue | Nuxt</div>
-                    <img
-                      src="assets/img/rocket-science.jpg"
-                      alt="rocket science"
-                      loading="lazy"
-                    />
-
-                    <div class="info">
-                      <div class="name">Rocket Science</div>
                     </div>
                   </div>
                 </a>
