add shimon games and blaj

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -221,6 +221,7 @@
                   class="portfolio__item"
                 >
                   <div class="item-cover">
+                    <div class="label">WordPress</div>
                     <img
                       src="assets/img/ubs.jpg"
                       alt="UBSLogic"
@@ -235,11 +236,48 @@
               </div>
               <div class="portfolio__col">
                 <a
+                  href="https://shimon.games/"
+                  target="_blank"
+                  class="portfolio__item"
+                >
+                  <div class="item-cover">
+                    <div class="label">WordPress</div>
+                    <img
+                      src="assets/img/shimon-games.jpg"
+                      alt="Shimon Games"
+                      loading="lazy"
+                    />
+
+                    <div class="info">
+                      <div class="name">Shimon Games</div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="portfolio__col">
+                <a
+                  href="https://blajspa.ae/"
+                  target="_blank"
+                  class="portfolio__item"
+                >
+                  <div class="item-cover">
+                    <div class="label">WordPress</div>
+                    <img src="assets/img/blaj.jpg" alt="Blaj" loading="lazy" />
+
+                    <div class="info">
+                      <div class="name">Blaj SPA</div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="portfolio__col">
+                <a
                   href="https://burkovms.github.io/pixo/"
                   target="_blank"
                   class="portfolio__item"
                 >
                   <div class="item-cover">
+                    <div class="label">Html</div>
                     <img src="assets/img/pixo.jpg" alt="Pixo" loading="lazy" />
 
                     <div class="info">
